css/general.css
/*>>> HEADLINE CARD */
.headline-card {
	transition: box-shadow 0.15s ease-in-out;
	/*background-color: rgba(243, 165, 115, 0.1)*/
}

.headline {
	cursor: pointer;
}

.headline.showing {
	cursor: initial;
}

.headline-card:hover {
	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .17) !important;
	transition: box-shadow 0.15s ease-in-out;
}

.headline-card-body {
	display: flex;
	flex-direction: column;
}

.headline-info {
	display: flex;
	flex-direction: row;
	font-size: 8pt;
	margin-top: 5px;
	padding-top: 5px;
	border-top: 1px solid lightgray;
}

.headline-badges > .badge {
	margin-top: 2.5px;
	margin-right: 6px;
	margin-bottom: 2.5px;
	margin-left: -2px;
	color: black;
	font-size: 8pt;
	font-weight: 600;

	cursor: pointer;

	-webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.badge-point {
	background-color: rgba(244, 165, 109, 1);
}
.badge-country {
	background-color: rgba(244, 165, 109, 0.35);;	
}


.headline-content {
	max-height: 0px;
	margin-top: 5px;
	overflow: hidden;
	transition: max-height 0.5s ease-in-out;
}

.headline-content a {
	margin-left: -2px;
	padding: 2px;

	text-decoration: underline;
	font-weight: 600;
	font-size: 8pt;
}

.headline.showing .headline-content {
	padding-bottom: 5px;
	overflow: scroll;
	transition: max-height 0.5s ease-in-out;
}
.headline.instant .headline-content {
	transition: none;
}
.headline.showing.instant .headline-content {
	transition: none;
}

.headline-title {
	font-weight: 500;
	margin-right: 15px;
	margin-top: -3px;
}

.headline-date {}

.headline-badge {
	margin-right: 5px;
	font-size: 8pt;
}

.headline .close {
	display: none;
}
.headline.showing .close {
	display: initial;
	right: 5px;
	top: 10px;

	padding: 5px;
    padding-left: 10px;
    padding-right: 10px;

	position: absolute;
	color: rgb(160, 160, 160);
	font-size: 12pt;
}

.headline-source {
	flex: 1;
}


/*>>> DROPDOWN STYLING*/
.dropdown {
	color: black;
	background-color: rgba(244, 165, 109, 1) !important;
	border-color: rgba(244, 165, 109, 1) !important;
}

.dropdown:hover,
.dropdown:active,
.dropdown:visited,
.dropdown:focus {
	color: black;
	background-color: rgb(233, 155, 105) !important;
	border-color: rgb(233, 155, 105) !important;
}

.dropdown:hover .dropdown-menu {
	display: block;
}

.dropdown-menu {
	margin-top: 0px;
	padding: 0px;
	width: 250px;
}

.dropdown-item.selected {
	background-color: rgba(244, 165, 109, 0.5);
}

.dropdown-item {
	padding-top: 10px;
	padding-bottom: 10px;
}

